k8s/gke/filebin2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebin2-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: filebin2-ip
    networking.gke.io/managed-certificates: filebin2-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: gke-https-redirect
spec:
  defaultBackend:
    service:
      name: filebin2-service
      port:
        number: 80
